Fixed issue of white space on right side.

--- a/client/src/App.global.scss
+++ b/client/src/App.global.scss
@@ -6,6 +6,10 @@
 @import '~bootstrap/scss/bootstrap.scss';
 
 // global overrides
+html,
+body {
+  overflow-x: hidden;
+}
 body {
   font-family: 'Nunito', sans-serif;
 }
