--- a/client/src/components/postsContainer/postsContainer.module.scss
+++ b/client/src/components/postsContainer/postsContainer.module.scss
@@ -1,5 +1,5 @@
 .noPostsContainer {
-  width: 100vw;
+  width: 100%;
   height: 50vh;
   display: flex;
   justify-content: center;
